test/integration/manifests/cilium/lrp/service-account.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: node-local-dns${POOL}
  namespace: kube-system
